--- a/hello.html
+++ b/hello.html
@@ -2,6 +2,12 @@
 <html lang="en">
     <head>
         <title>Hello!</title>
+        <style>
+            body {
+                font-family: Arial, sans-serif;
+                margin: 20px;
+            }
+        </style>
     </head>
     <body>
         Hello World!
