--- a/hello.html
+++ b/hello.html
@@ -11,6 +11,6 @@
     </head>
     <body>
         Hello World!
-        <div>This is a simple HTML file.</div>
+        <h1>This is a simple HTML file.</h1>
     </body>
 </html>
