--- a/hello.html
+++ b/hello.html
@@ -12,5 +12,6 @@
     <body>
         Hello World!
         <h1>This is a simple HTML file.</h1>
+        <h2>This is a simple HTML file.</h2>
     </body>
 </html>
