Update greeting text in hello.html

--- a/hello.html
+++ b/hello.html
@@ -10,7 +10,7 @@
         </style>
     </head>
     <body>
-        Hello World!
+        Hello, World!
         <h1>This is a simple HTML file.</h1>
     </body>
 </html>
