added color blue

--- a/hello.html
+++ b/hello.html
@@ -4,8 +4,9 @@
         <title>Hello!</title>
         <style>
             body {
-                font-family: Arial, sans-serif;
+                font-family: Arial;
                 margin: 20px;
+                color: blue;
             }
         </style>
     </head>
