removed another font-familly

--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
         <title>Hello!</title>
         <style>
             body {
-                font-family: Arial, sans-serif;
+                font-family: Arial;
                 margin: 20px;
             }
         </style>
