--- a/hello.html
+++ b/hello.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         Hello, World!
-        <h1>This is a simple HTML file.</h1>
+        <h1>Welcome to My Website.</h1>
         <h2>This is a simple HTML file.</h2>
     </body>
 </html>
